# adk-ag-ui-lit-sample

./: .gitignore  CLAUDE.md  README.md
agent/: .gitignore  main.py  pyproject.toml
agent/agent/: agent.py
agent/sample_agent/: agent.py  tools.py
agent/sample_agent/skills/lt-structure/: SKILL.md
agent/sample_agent/skills/marp-design/: SKILL.md
agent/sample_agent/skills/marp-design/references/: directives.md
agent/sample_agent/skills/pptx-export/: SKILL.md
docs/: tool-system-spec.md
docs/plans/: 2026-03-07-lt-slide-creator-design.md  2026-03-07-lt-slide-creator-plan.md
web/: .oxfmtrc.json  .oxlintrc.json  biome.json  index.html  package.json  pnpm-lock.yaml
web/src/: ag-ui-agent.ts  ag-ui-controller.ts  chat-app.ts  chat-input.ts  chat-loading-message.ts  chat-message.ts  chat-messages.ts  index.css  markdown-content.ts  slide-app.ts  types.ts
web/src/custom-elements/: chat-input.ts  chat-loading-message.ts  chat-message.ts  chat-messages.ts  code-editor.ts  markdown-content.ts  slide-preview.ts  toast-item.ts  toast-manager.ts
web/src/styles/: a11y.ts  chat-message-base.ts  tokens.ts
web/src/tools/: hello-tool.ts
web/src/types/: events.ts  index.ts  message.ts  tool.ts
web/src/utils/: markdown-processor.ts
