[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.0.0b1",
    "ag-ui-adk>=0.6.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv]
prerelease = "allow"
exclude-newer = "1 day"
override-dependencies = [
    "google-adk>=2.0.0b1",
]
